--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ node_modules
 .env.development.local
 .env.test.local
 .env.production.local
+.env
+public/env.js
 
 npm-debug.log*
 yarn-debug.log*
