--- a/package.json
+++ b/package.json
@@ -1,1 +1,54 @@
-{"name":"Metropolia WebDev project","version":"0.1.0","private":true,"dependencies":{"@preact/signals-react":"^1.3.6","@react-oauth/google":"^0.11.1","@testing-library/jest-dom":"^5.17.0","@testing-library/react":"^13.4.0","@testing-library/user-event":"^13.5.0","axios":"^1.6.1","babel-loader":"^9.1.3","jwt-decode":"^4.0.0","prop-types":"^15.8.1","react":"^18.2.0","react-dom":"^18.2.0","react-dotenv":"^0.1.3","react-icons":"^4.11.0","react-router-dom":"^6.19.0","react-scripts":"5.0.1","web-vitals":"^2.1.4","webpack":"^5.89.0"},"scripts":{"start":"react-dotenv && react-scripts start","build":"react-dotenv && react-scripts build","test":"react-dotenv && react-scripts test","eject":"react-dotenv && react-scripts eject"},"eslintConfig":{"extends":["react-app","react-app/jest"]},"browserslist":{"production":[">0.2%","not dead","not op_mini all"],"development":["last 1 chrome version","last 1 firefox version","last 1 safari version"]},"react-dotenv":{"whitelist":["GOOGLE_CLIENT_ID"]},"devDependencies":{"@babel/plugin-proposal-private-property-in-object":"^7.21.11","nodemon":"^3.0.1"}}
+{
+  "name": "Metropolia WebDev project",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@preact/signals-react": "^1.3.6",
+    "@react-oauth/google": "^0.11.1",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.1",
+    "jwt-decode": "^4.0.0",
+    "prop-types": "^15.8.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
+    "react-icons": "^4.11.0",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4"
+  },
+  "scripts": {
+    "start": "react-dotenv && react-scripts start",
+    "build": "react-dotenv && react-scripts build",
+    "test": "react-dotenv && react-scripts test",
+    "eject": "react-dotenv && react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "react-dotenv": {
+    "whitelist": [
+      "GOOGLE_CLIENT_ID"
+    ]
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "nodemon": "^3.0.1"
+  }
+}
