--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "proxy": "http://localhost:4000",
   "name": "Metropolia WebDev project",
   "version": "0.1.0",
   "private": true,
@@ -12,19 +13,12 @@
     "axios": "^1.6.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jwt-decode": "^4.0.0",
-    "mongodb": "^6.3.0",
-    "mongoose": "^8.0.1",
-    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.20.0",
-    "react-scripts": "^5.0.1",
-    "uuid": "^9.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-dotenv && react-scripts start",
