--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "main": "server.js",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/joy": "^5.0.0-beta.17",
     "@preact/signals-react": "^1.3.6",
     "@react-oauth/google": "^0.11.1",
     "@testing-library/jest-dom": "^5.17.0",
@@ -21,7 +24,6 @@
     "react-scripts": "^5.0.1",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
-
   },
   "scripts": {
     "start": "react-dotenv && react-scripts start",
