--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node backend/server.js",
     "dev": "nodemon server.js",
     "build": "react-scripts build"
   },
